# raylibKirjasto

./: .gitignore  CMakeLists.txt
include/: entity.hpp  game.hpp  gameManager.hpp  nametag.hpp  textureManager.hpp
src/: entity.cpp  game.cpp  gameManager.cpp  main.cpp  nametag.cpp
